# ai-system

./: .gitignore  AI_SETTINGS_COMPLETION_SUMMARY.md  AI_SETTINGS_INTEGRATION_GUIDE.md  CLAUDE.md  NAVIGATION_GUIDE.md  README.md  camera_error_diagnosis.py  electron-builder.yml  index.html  package-lock.json  package.json  restart-app.sh  simple_camera_test.py  sync_backend.sh  vite.config.ts
backend/: .env.example  .gitignore  AI_SETTINGS_API.md  BROKER_IMPLEMENTATION_SUMMARY.md  CAMERA_MONITOR_GUIDE.md  DATA_MIGRATION_SUMMARY.md  DYNAMIC_REGISTRATION_GUIDE.md  DYNAMIC_REGISTRATION_QUICK_REF.md  DYNAMIC_REGISTRATION_SUMMARY.md  ERROR_HANDLER_GUIDE.md  FINAL_TEST_REPORT.md  HANDLER_VERIFICATION.md  JY901_TEST_REPORT.md  MANUAL_TEST_CHECKLIST.md  MIGRATION_GUIDE.md  MOCK_SENSOR_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RTSP_USAGE.md  SUBSCRIPTION_NOTIFICATION_GUIDE.md  SUBSCRIPTION_QUICK_START.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TESTING_QUICK_REFERENCE.md  TEST_EXECUTION_GUIDE.md  TEST_REPORT_TEMPLATE.md  TEST_RESULTS.md  check_routes.py  debug_collect_stream.py  fix_camera_directions.py  init_ai_settings.py  migrate_add_enabled.py  pyproject.toml  restart_backend.sh  run_jy901_realtime.sh  run_sensor_camera_monitor.sh  run_verification_tests.py  storage_implementation_verification.md  test_ai_settings_api.py  test_backend_status.py  test_broker_data_flow.py  (+34 more)
backend/data/: vision_security.db
backend/examples/: camera_import_example.json  camera_online_check_example.md  dynamic_registration_example.py
backend/scripts/: README.md  add_angle_range_enabled.py  add_angle_ranges_table.py  (+2 more)
(+179 files in other folders)
