[project]
name = "vision-security-backend"
version = "0.1.0"
description = "Python backend for vision security monitoring system"
requires-python = "==3.11.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "opencv-python>=4.8.0",
    "apscheduler>=3.10.0",
    "pyserial>=3.5",
    "pytest-asyncio>=1.3.0",
    "rknn-toolkit-lite2>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.uv.sources]
rknn-toolkit-lite2 = { path = "/home/cat/rknn-toolkit2/rknn-toolkit-lite2/packages/rknn_toolkit_lite2-2.3.2-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl" }
